Changes to better it

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <body>
     <div id="container">
       <div id="qr-reader"></div>
-      <button id="btn-get-location">Get Location</button>
+
       <div id="objToSend"></div>
+      <button id="btn-send-info">Send Info</button>
     </div>
     <script src="./src/qrCodeScanner.js"></script>
   </body>
